...
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="title_filter">Filter</string>

    <!--    SnackBar text-->
    <string name="snackBar_text_currency_saved">Currency successfully saved</string>
    <string name="snackBar_text_exchange_rate_removed">Exchange rate have removed</string>
    <string name="snackBar_text_undo_remove">Undo</string>

    <!--    SnackBar base buttons-->
    <string name="snackBar_positive_button_ok">OK</string>

    <!--    AlertDialog title-->
    <string name="alert_dialog_title_error">Sorry, Something went wrong</string>
...
