<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/exchangeRates"
        android:icon="@drawable/ic_bitcoin_menu"
        android:title="@string/title_exchange_rates" />
    <item
        android:id="@+id/chart"
        android:icon="@drawable/ic_chart_menu"
        android:title="@string/title_chart" />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_star_menu"
        android:title="@string/title_favorites" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_menu"
        android:title="@string/title_profile" />
</menu>