<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_chart_layout"
    xmlns:tools="http://schemas.android.com/tools">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:indeterminateTint="@color/main_green"
        android:layout_height="48dp"/>

</FrameLayout>